--- a/faqs/index.html
+++ b/faqs/index.html
@@ -25,7 +25,7 @@
 
   <!-- Add your site or application content here -->
   <p>Hello world! This is HTML5 Boilerplate.</p>
-  <script src="js/app.js"></script>
+  <script src="../js/app.js"></script>
 
 </body>
 
