--- a/faq/index.html
+++ b/faq/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>FAQs</title>
+  <title>FAQs | Unplugged Retreat</title>
   <link rel="stylesheet" href="../css/style.css">
   <meta name="description" content="">
 
@@ -22,7 +22,7 @@
 </head>
 
 <body>
-  <header></header>
+  <header>
     <div class="content-wrapper">
       <figure>
         <a href="#"img src="img/unplugggedlogo.png" alt="unplugggedlogo"></a>
@@ -33,7 +33,7 @@
         <nav>
           <ul>
             <li><a href="index.html" target="_blank">Home</a></li>
-            <li><a href="about/index.html" target="_blank">About</a></li>
+            <li><a href="../about/index.html" target="_blank">About</a></li>
           </ul>
         </nav>
     </div>
