--- a/about/index.html
+++ b/about/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>About</title>
+  <title>About | Unplugged Retreat</title>
   <link rel="stylesheet" href="../css/style.css">
   <meta name="description" content="">
 
@@ -33,7 +33,7 @@
         <nav>
           <ul>
             <li><a href="index.html" target="_blank">Home</a></li>
-            <li><a href="faq/index.html" target="_blank">FAQs</a></li>
+            <li><a href="../faq/index.html" target="_blank">FAQs</a></li>
           </ul>
         </nav>
     </div>
