--- a/faq/index.html
+++ b/faq/index.html
@@ -30,7 +30,9 @@
   <header>
     <div class="content-wrapper">
       <figure>
-        <a href="#"img src="img/unplugggedlogo.png" alt="unplugggedlogo"></a>
+        <a href="#">
+          <img src="img/unpluggedlogo.png" alt="unpluggged logo">
+        </a>
       </figure>
       
         <div class="header-divider"><div>
