--- a/index.html
+++ b/index.html
@@ -30,7 +30,9 @@
   <header>
     <div class="content-wrapper">
       <figure>
-        <a href="#"img src="img/unplugggedlogo.png" alt="unplugggedlogo"></a>
+        <a href="#">
+          <img src="img/unpluggedlogo.png" alt="unpluggged logo">
+        </a>
       </figure>
       
         <div class="header-divider"><div>
@@ -126,6 +128,11 @@
         <section class="reviews">
           <div class="content-wrapper">
             <h2>Be a better team in 5 days, like this one.</h2>
+            <figure>
+              <a href="">
+                <img src="img/unplugged-retreat-lacrue.jpg" alt="Photo of team at the retreat">
+              </a>
+            </figure>
             <article>
               <h3>LaCrue Bottling Co.
                 October 2018</h3>
