--- a/about/index.html
+++ b/about/index.html
@@ -109,19 +109,15 @@
       <div class="social">
         <h4>Social</h4>
         <div class="social-icons">
-          <p>
-            <a href="https://www.facebook.com/Skillcrush/" target="_blank"></a>
+          <p class="fontawesome-icon"><a href="https://www.facebook.com/Skillcrush/" target="_blank"><i class="fa-brands fa-facebook" style="color: #ffffff;"></i></a>
           </p>
-          <p>
-            <a href="https://twitter.com/Skillcrush" target="_blank"></a>
+          <p class="fontawesome-icon"><a href="https://twitter.com/Skillcrush" target="_blank"><i class="fa-brands fa-twitter" style="color: #ffffff;"></i></a>
           </p>
-          <p>
-            <a href="https://www.instagram.com/skillcrush/" target="_blank"></a>
+          <p class="fontawesome-icon"><a href="https://www.instagram.com/skillcrush/" target="_blank"><i class="fa-brands fa-instagram" style="color: #ffffff;"></i></a>
           </p>
         </div>
       </div>
     </div>
-    <!-- footer content ends -->
   </div>
 
       
